[project]
name = "stock-price-prediction-using-advanced-modelling"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "fastparquet>=2026.5.0",
    "matplotlib>=3.10.9",
    "pandas>=3.0.3",
    "pandas-market-calendars>=5.4.0",
    "pyarrow>=24.0.0",
    "requests>=2.34.2",
    "scikit-learn>=1.9.0",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
    "shap>=0.51.0",
    "ta>=0.11.0",
    "tqdm>=4.68.1",
    "wordcloud>=1.9.6",
    "yfinance>=1.4.1",
]
